src/test/ui/feature-gates/feature-gate-tool_attributes.stderr
error[E0658]: tool attributes are unstable (see issue #44690)
  --> $DIR/feature-gate-tool_attributes.rs:14:5
   |
LL |     #[rustfmt::skip] //~ ERROR tool attributes are unstable
   |     ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(tool_attributes)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
